--- a/E03_Tomas_Lizazu.ipynb
+++ b/E03_Tomas_Lizazu.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNv6EKeO11OXFK5FbW0H1Rk",
+      "authorship_tag": "ABX9TyPAdrbrJvnWtx5jpj2i0sMd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,6 +70,33 @@
         "id": "GaZLf-_3OUzU"
       },
       "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Listas** de Datos de ejemplo para el gráfico y definición de valores\n",
+        "para las coordenadas.\n"
+      ],
+      "metadata": {
+        "id": "wc1Up0doO1x9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "coordenadas_x = [0, 1, 2, 3, 4]\n",
+        "coordenadas_y = [0, 1, 2, 3, 4]\n",
+        "concentraciones = [[10, 10.625, 12.5, 15.625, 20],\n",
+        " [5.625, 6.25, 8.125, 11.25, 15.625],\n",
+        " [2.5, 3.125, 5.0, 8.125, 12.5],\n",
+        " [0.625, 1.25, 3.125, 6.25, 10.625],\n",
+        " [0, 0.625, 2.5, 5.625, 10]]\n"
+      ],
+      "metadata": {
+        "id": "azoSGZatO299"
+      },
+      "execution_count": 5,
       "outputs": []
     }
   ]
