--- a/E03_Tomas_Lizazu.ipynb
+++ b/E03_Tomas_Lizazu.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPAdrbrJvnWtx5jpj2i0sMd",
+      "authorship_tag": "ABX9TyOn2iWFP0ScE4mNQvwSSWCB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,6 +97,37 @@
         "id": "azoSGZatO299"
       },
       "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Configuración del Gráfico:** \\\n",
+        "Esta Sección configura los parámetros para indicarle al\n",
+        "**Framework**, *Dash* cómo crear el gráfico de contorno con la\n",
+        "*Objeto* **iplot**."
+      ],
+      "metadata": {
+        "id": "UikZq2TTQCol"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = [go.Contour(\n",
+        " x=coordenadas_x,\n",
+        " y=coordenadas_y,\n",
+        " z=concentraciones,\n",
+        " colorscale='Viridis'\n",
+        ")]\n",
+        "# Crear la figura y mostrar el gráfico\n",
+        "fig = go.Figure(data=data)\n",
+        "iplot(fig)\n"
+      ],
+      "metadata": {
+        "id": "HNNUxAamQF2F"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
