--- a/E03_Tomas_Lizazu.ipynb
+++ b/E03_Tomas_Lizazu.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOn2iWFP0ScE4mNQvwSSWCB",
+      "authorship_tag": "ABX9TyOvEqtYB3PwM6gwpiqP8P51",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,14 +114,21 @@
     {
       "cell_type": "code",
       "source": [
+        "# Crear el gráfico de contorno\n",
         "data = [go.Contour(\n",
         " x=coordenadas_x,\n",
         " y=coordenadas_y,\n",
         " z=concentraciones,\n",
         " colorscale='Viridis'\n",
         ")]\n",
+        "# Configurar el layout del gráfico\n",
+        "layout = go.Layout(\n",
+        " title='Concentración de Minerales en Área de Estudio',\n",
+        " xaxis=dict(title='Coordenada X'),\n",
+        " yaxis=dict(title='Coordenada Y')\n",
+        ")\n",
         "# Crear la figura y mostrar el gráfico\n",
-        "fig = go.Figure(data=data)\n",
+        "fig = go.Figure(data=data, layout=layout)\n",
         "iplot(fig)\n"
       ],
       "metadata": {
